<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_blue_shade"
        tools:context=".ui.auth.SignUpFragment">

        <include
            android:id="@+id/toolbarIncluded"
            layout="@layout/toolbar_back_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/_0sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarIncluded">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_blue_dark"
                    android:paddingVertical="@dimen/_16sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewUserProfile"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:src="@drawable/ic_placeholder"
                        android:tint="@color/white_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintCircle="@id/imageViewUserProfile"
                        app:layout_constraintCircleAngle="135"
                        app:layout_constraintCircleRadius="@dimen/_60sdp"
                        app:srcCompat="@drawable/ic_camera_white"
                        tools:ignore="MissingConstraints" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--Name & Surname-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutNameSurname"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNameSurname"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_surname"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Mobile number-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutMobile"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMobile"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Confirm Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutConfirmPassword"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextConfirmPassword"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Position / work / Responsible-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutWork"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextWork"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_position_work_responsible"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--General Hospital Name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutGeneralHospitalName"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextGeneralHospitalName"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/general_hospital_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>


                <!--Community Hospital Name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCommunityHospitalName"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCommunityHospitalName"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/community_hospital_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Village Hospital Name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutVillageHospitalName"
                    style="@style/Widget.Custom.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextVillageHospitalName"
                        style="@style/Widget.Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/village_hospital_name"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            style="@style/Button.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_48sdp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>